# litestar-skills

./: .geminiignore  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .oxlintrc.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  gemini-extension.json  hooks.json  manifest  package.json  plugin.json  pyproject.toml  r6sunmjnnnbeo6uvvfbeheos7mlgceff
.agents/plugins/: marketplace.json
.claude-plugin/: INSTALL.md  marketplace.json  plugin.json
.claude-plugin/agents/: litestar-reviewer.md
.codex/: INSTALL.md  config.toml
.codex-plugin/: plugin.json
.codex/agents/: litestar-reviewer.toml
.cursor-plugin/: INSTALL.md  plugin.json
.gemini/: INSTALL.md
.github/workflows/: lint.yml  release.yml  test.yml
.opencode/: INSTALL.md
.opencode/agents/: litestar-reviewer.md
.opencode/plugins/: litestar-skills.js  litestar.js
agents/: litestar-reviewer.md
commands/litestar/: configure.toml  integrate.toml  new-app.toml  new-domain.toml  review.toml
docs/: launch-checklist.md  managed-settings-example.json  policy.md  roadmap.md  submission-tracker.md
hooks/: hooks-claude.json  hooks-codex.json  hooks-cursor.json  hooks.json  run-hook.cmd  session-start  session-start.js  session-start.ps1  session-start.sh
hooks/lib/: _detector.py  detect-env.js  detect-env.ps1  detect-env.sh  skill-map.json
plugins/litestar/.codex/: INSTALL.md
plugins/litestar/.codex-plugin/: plugin.json
plugins/litestar/.codex/agents/: litestar-reviewer.toml
plugins/litestar/commands/litestar/: configure.toml  new-app.toml  new-domain.toml  review.toml
plugins/litestar/hooks/: hooks-claude.json  hooks-codex.json  hooks.json  run-hook.cmd  session-start.js  session-start.ps1  session-start.sh
plugins/litestar/hooks/lib/: _detector.py  detect-env.js  detect-env.ps1  detect-env.sh  skill-map.json
plugins/litestar/skills/advanced-alchemy/: SKILL.md
skills/advanced-alchemy/: SKILL.md
skills/advanced-alchemy/references/: bases.md  caching.md  fastapi-integration.md  filters.md  flask-integration.md  frameworks.md  litestar_plugin.md  migrations.md  models.md  operations.md  replicas.md  repositories.md  sanic-integration.md  services.md  starlette-integration.md  storage.md  types.md
skills/inertia/: SKILL.md
skills/litestar/: SKILL.md
skills/litestar-ai-serving/: SKILL.md
skills/litestar-ai-serving/references/: ai-serving.md
skills/litestar-auth-guards/: SKILL.md
skills/litestar-build/: SKILL.md
skills/litestar-build/references/: github-ci.md  github-release.md  pyapp-advanced.md  pyapp-simple.md  upgrading.md  wheel-assets.md
skills/litestar-data-services/: SKILL.md
skills/litestar-data-services/references/: pagination.md  services.md
skills/litestar-deployment/: SKILL.md
skills/litestar-deployment/references/: cloud-run.md  docker-compose.md  docker-distroless.md  docker-standard.md  docker-workers.md  kubernetes.md  litestar-app.md  systemd.md
skills/litestar-di/: SKILL.md
skills/litestar-di/references/: di.md
skills/litestar-dto-openapi/: SKILL.md
skills/litestar-dto-openapi/references/: dto.md
skills/litestar-email/: SKILL.md
skills/litestar-exceptions/references/: exceptions.md
skills/litestar-granian/: SKILL.md
skills/litestar-htmx/: SKILL.md
skills/litestar-htmx/references/: litestar_vite.md
skills/litestar-inertia/: SKILL.md
skills/litestar-inertia/references/: litestar_integration.md  protocol.md
skills/litestar-mcp/: SKILL.md
skills/litestar-plugins/: SKILL.md
skills/litestar-plugins/references/: plugins.md
skills/litestar-realtime/: SKILL.md
skills/litestar-realtime/references/: realtime-events.md  websockets.md
skills/litestar-routing/: SKILL.md
skills/litestar-routing/references/: example.md  routing.md
skills/litestar-saq/: SKILL.md
skills/litestar-saq/references/: patterns.md  postgresql-native.md
skills/litestar-settings/: SKILL.md
skills/litestar-styleguide/: SKILL.md
skills/litestar-styleguide/references/: canonical-apps.md  ci-cd.md  general.md  google-developer-knowledge-mcp.md  litestar.md  python.md  testing.md  typescript.md
skills/litestar-testing/: SKILL.md
skills/litestar-testing/references/: async_testing.md
skills/litestar-vite/: SKILL.md
skills/litestar-vite/references/: config.md  deployment.md  hmr.md  modes.md  release-updates.md  troubleshooting.md  typegen.md
skills/litestar/references/: ai-serving.md  deployment.md  di.md  domains.md  dto.md  example.md  exceptions.md  guards.md  middleware.md  pagination.md  plugins.md  realtime-events.md  routing.md  services.md  settings.md  websockets.md
skills/msgspec/: SKILL.md
skills/msgspec/references/: constraints.md  litestar-patterns.md
skills/polyfactory/: SKILL.md
skills/polyfactory/references/: factories.md  litestar-patterns.md  pytest-integration.md
skills/pytest-databases/: SKILL.md
skills/pytest-databases/references/: config.md  reference.md  troubleshooting.md  xdist.md
skills/sqlspec/: SKILL.md
skills/sqlspec/references/: adapters.md  adk.md  architecture.md  arrow.md  commit-modes.md  dishka-integration.md  driver_api.md  events.md  extensions.md  fastapi-integration.md  filters.md  flask-integration.md  loader.md  migrations.md  multi-database.md  observability.md  patterns.md  query_builder.md  service-patterns.md  standards.md  starlette-integration.md  storage.md  vector-search.md
templates/managed-settings/: claude-code.json
tests/: conftest.py  test_agent_generator.py  test_gitignore_carveout.py  test_manifest_schema.py  test_sync_codex_package.py  test_sync_manifests.py  test_validate_skills.py
tests/hooks/: _subproc.py  test_detect_env.py  test_opencode_plugin.py  test_perf.py  test_session_start_emission.py  test_session_start_invocation.py
tools/: PSScriptAnalyzerSettings.psd1  check-upstream-imports.py  generate-agents.py  install.ps1  install.sh  sync-codex-package.py  sync-codex-package.sh  sync-manifests.py  uninstall.sh  validate-codex-manifest.py  validate-skills.py
tools/agent-sources/: litestar-reviewer.yaml
(+90 files in other folders)
